--- a/src/components/MobileRice.css
+++ b/src/components/MobileRice.css
@@ -35,6 +35,15 @@
   object-fit: cover; /* ビデオがコンテナを覆うように設定 */
 }
 
+.text-container1 {
+  position: absolute;
+  top: 10%;
+  left: 30%;
+  transform: translate(-50%, -50%);
+  z-index: 10; /* テキストをビデオの上に表示 */
+  color: black; /* テキストの色 */
+  text-align: center;
+}
 
 
 .heading {
